ChangeLog for 2.53.1

//Beta 52

Fixed error messages for invald GOTO type instructions.
	( ZoriaRPG, 9th July, 2020 )
	
Fixed possible crash on invalid gotos from logging args order.
	( ZoriaRPG, 7th July, 2020 )
	
Epilepsy Protection is now set when you launch a NEW INSTALL of ZC,
immediately prior to loaing the player interface.
	If the zc.cfg value 'checked_epilepsy' is not present, or is set 
	to '0', then ZC will ask the user if they want this enabled
	and set this config value so that it is not re-checked:
		1. If there is no valid .sav file, then this will appear prior
		   to the .sa file creation dialogue. 
		2. If a .sav file exists, this will occur prior to the title
		   screen, if the config int 'checked_epilepsy' is not present
		   or is set to 0 in zc.cfg.
		3. If 'checked_epilepsy' is in zc.cfg and is set to '1', then
		   this dilogue will not open, and the user's epilepsy protection
		   settings are used as normal.
		4. The dialogue defaults to NO. 
Reduced the amplitude of screen wave effects when epilepsy protection is enabled.
	( ZoriaRPG, 17th June, 2020 )

Added a ZQE hotkey for '?' that opens the version info display.
	( ZoriaRPG, 13th June, 2020 )

Added an emulation flag '2.10 Hammer Upward Reach' that extends
	the vertical reach of the Hamer weapon by four pixels 
	when the player is facing up. 
	This is automatically enabled for 2.10 and earlier quests. 
	( ZoriaRPG, 12th June, 2020 )

Implemented a request from ShadowTiger, whereby when you edit a
	DMap, and select a map tile, when you go to edit further
	DMap map tiles within the same session, the DMap editor will
	remember the last tile that you used. 
	This will clear on loading any quest, but it remains static
	while working on a quest in memory, updating each time that
	the user selects a different tile in this editor. 
	( ZoriaRPG, 11th June, 2020 )

Header Guard for the ZScript compiler is now defaulted to off. 
Added the following configs to ZQuest: