@@ -2,6 +2,9 @@ ChangeLog for 2.53.1
 
 //Beta 52
 
+Added Fullsceen confirmation warning, backported from 2.55.
+	( ZoriaRPG, 25th July, 2020 )
+	
 Fixed error messages for invald GOTO type instructions.
 	( ZoriaRPG, 9th July, 2020 )
 	
